kustomize/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-dev
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: quay.io/dhanamjaya/do400-deploying-environments:latest
        imagePullPolicy: Always
        name: simple-dev
        ports:
          - containerPort: 8080
            protocol: TCP
